feat: add tooltip to range slider

--- a/index.html
+++ b/index.html
@@ -207,8 +207,25 @@
             <div class="value-display">
               <span>عدد</span>
               <span id="displayValue" class="large-number">۲۰</span>
-              <span>انتخاب شده</span>
-              <span class="info-icon">؟</span>
+              
+              <div class="selection-row">
+                  <span>انتخاب شده</span>
+                  <span class="info-icon">؟</span>
+                  
+                  <div class="tooltip-box">
+                    <div class="tooltip-header">
+                        <span class="close-tooltip">✕</span>
+                        <h4>متن راهنما</h4>
+                    </div>
+                    <div class="tooltip-body">
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، 
+                            و با استفاده از طراحان گرافیک است.
+                        </p>
+                    </div>
+                    <div class="tooltip-arrow"></div>
+                </div>
+              </div>
             </div>
 
             <div class="slider-wrapper">
