feat: add animated text to form

--- a/index.html
+++ b/index.html
@@ -144,7 +144,14 @@
           <div class="signup-brand">
             <h2>
               Let’s Make <br />
-              a <span class="highlight-text">Easier</span> <br />
+              a               
+              <span class="highlight-text word-container">
+                <span class="word-flipper">
+                  <span>Easier</span>
+                  <span>Better</span>
+                </span>
+              </span>
+               <br />
               World <br />
               together
             </h2>
