feat: add vektor and icon to header

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
       <section class="hero-section">
         <h1 class="hero-title">
           بزار کُدت
-          <span class="code-icon-wrapper">&lt;/&gt;</span>
+
+          <img src="assets/images/code.png" alt="code" class="hero-icon" />
           حرف بزنه...
         </h1>
         <p class="hero-subtitle">صفحه ای ساده اما با جزئیات ریز!</p>
+
+        <img src="assets/icons/Vector.svg" alt="Vector" class="hero-vektor" />
       </section>
 
       <section class="section-card">
