feat: animated success on form

--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
                 <button type="button" class="btn-cancel">انصراف</button>
               </div>
             </form>
+            <div class="success-message" id="successMessage" style="display: none;">
+              <div class="success-icon-box">
+                <img src="assets/icons/Smiley.svg" alt="Success" class="success-smiley">
+              </div>
+              <h3 class="success-title">ثبت نام شما با موفقیت انجام شد!</h3>
+              <p class="success-desc">به مجموعه ما خوش آمدید...</p>
+              <button type="button" class="btn-back-outline" id="backToFormBtn">بازگشت</button>
+            </div>
           </div>
         </div>
       </section>
