feat: add footer

--- a/index.html
+++ b/index.html
@@ -357,8 +357,10 @@
           </div>
         </div>
       </section>
+ 
 
       <div style="height: 100px"></div>
+      <img src="assets/images/footer.png" alt="Success" class="footer" >
     </div>
     <script src="js/main.js"></script>
     <div class="video-popup" id="videoPopup">
