feat: add unsuccessful form state

--- a/index.html
+++ b/index.html
@@ -304,6 +304,17 @@
               <p class="success-desc">به مجموعه ما خوش آمدید...</p>
               <button type="button" class="btn-back-outline" id="backToFormBtn">بازگشت</button>
             </div>
+
+<div class="success-message error-mode" id="errorMessage" style="display: none;">
+  <div class="success-icon-box error-theme">
+
+    <img src="assets/icons/SmileySad.svg" alt="Error" >
+  </div>
+  <h3 class="success-title">مشکلی پیش آمده!</h3>
+  <p class="success-desc">ثبت نام شما انجام نشد...</p>
+  <button type="button" class="btn-back-outline" id="backFromErrorBtn">بازگشت</button>
+</div>
+
           </div>
         </div>
       </section>
