feat: animated flyer on form

--- a/index.html
+++ b/index.html
@@ -296,29 +296,48 @@
                 <button type="button" class="btn-cancel">انصراف</button>
               </div>
             </form>
-            <div class="success-message" id="successMessage" style="display: none;">
+            <div
+              class="success-message"
+              id="successMessage"
+              style="display: none"
+            >
               <div class="success-icon-box">
-                <img src="assets/icons/Smiley.svg" alt="Success" class="success-smiley">
+                <img
+                  src="assets/icons/Smiley.svg"
+                  alt="Success"
+                  class="success-smiley"
+                />
               </div>
               <h3 class="success-title">ثبت نام شما با موفقیت انجام شد!</h3>
               <p class="success-desc">به مجموعه ما خوش آمدید...</p>
-              <button type="button" class="btn-back-outline" id="backToFormBtn">بازگشت</button>
+              <button type="button" class="btn-back-outline" id="backToFormBtn">
+                بازگشت
+              </button>
             </div>
 
-<div class="success-message error-mode" id="errorMessage" style="display: none;">
-  <div class="success-icon-box error-theme">
-
-    <img src="assets/icons/SmileySad.svg" alt="Error" >
-  </div>
-  <h3 class="success-title">مشکلی پیش آمده!</h3>
-  <p class="success-desc">ثبت نام شما انجام نشد...</p>
-  <button type="button" class="btn-back-outline" id="backFromErrorBtn">بازگشت</button>
-</div>
-
+            <div
+              class="success-message error-mode"
+              id="errorMessage"
+              style="display: none"
+            >
+              <div class="success-icon-box error-theme">
+                <img src="assets/icons/SmileySad.svg" alt="Error" />
+              </div>
+              <h3 class="success-title">مشکلی پیش آمده!</h3>
+              <p class="success-desc">ثبت نام شما انجام نشد...</p>
+              <button
+                type="button"
+                class="btn-back-outline"
+                id="backFromErrorBtn"
+              >
+                بازگشت
+              </button>
+            </div>
           </div>
         </div>
       </section>
 
+      <!-- Range SLider  -->
       <section class="range-slider-section">
         <div class="card-wrapper">
           <div class="rs-card-section rs-header-section">
@@ -368,10 +387,9 @@
           </div>
         </div>
       </section>
- 
 
       <div style="height: 100px"></div>
-      <img src="assets/images/footer.png" alt="Success" class="footer" >
+      <img src="assets/images/footer.png" alt="Success" class="footer" />
     </div>
     <script src="js/main.js"></script>
     <div class="video-popup" id="videoPopup">
