style: add fonts and colors

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <section class="hero-section">
         <h1 class="hero-title">
-          بزار کُدت
+          بذار کُدت
 
           <img src="assets/images/code.png" alt="code" class="hero-icon" />
           حرف بزنه...
@@ -195,6 +195,7 @@
               <br />
               World <br />
               together
+              <img src="assets/icons/Group-3.svg" alt="Group-3" class="svg-group "/>
             </h2>
             <div class="smiley-badge">
               <img src="assets/icons/Smiley.svg" alt="smile" />
@@ -291,7 +292,9 @@
                   id="submitBtn"
                   disabled
                 >
+                <img src="assets/icons/UserPlus.svg" alt="user" >
                   ثبت نام
+              
                 </button>
                 <button type="button" class="btn-cancel">انصراف</button>
               </div>
@@ -323,11 +326,11 @@
               <div class="success-icon-box error-theme">
                 <img src="assets/icons/SmileySad.svg" alt="Error" />
               </div>
-              <h3 class="success-title">مشکلی پیش آمده!</h3>
+              <h3 class="failed-title">مشکلی پیش آمده!</h3>
               <p class="success-desc">ثبت نام شما انجام نشد...</p>
               <button
                 type="button"
-                class="btn-back-outline"
+                class="btn-back-outline-f"
                 id="backFromErrorBtn"
               >
                 بازگشت
