style: form inputs

--- a/index.html
+++ b/index.html
@@ -206,10 +206,12 @@
             <form action="#">
               <div class="form-group">
                 <label class="form-label">نام کاربری</label>
+                <div class="error-tooltip">فقط حروف مجاز است!</div>
                 <input
                   type="text"
                   class="form-input"
                   placeholder="مثلاً: حمیدرضا"
+                  
                 />
               </div>
               <div class="form-group">
