style: responsive range slider

--- a/index.html
+++ b/index.html
@@ -379,14 +379,7 @@
             </div>
 
             <div class="slider-wrapper">
-              <input
-                type="range"
-                id="rangeInput"
-                min="10"
-                max="100"
-                step="10"
-                value="20"
-              />
+              <input type="range" id="rangeInput" min="10" max="100" step="10" value="20" orient="vertical">
               <div class="slider-labels" id="labelContainer"></div>
             </div>
           </div>
